# AegisOps

./: .env.example  .gitignore  CODE_SUMMARY.md  Dockerfile  LICENSE  OPERATIONS.md  QUICKSTART.md  README.md  WORKFLOW.md  aegisops_docs.html  agent_rules.md  changelog.md  fix.ps1  fix.sh  logs.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start.ps1  start.sh  update-changelog.ps1  vercel.json
.githooks/: post-merge
LogGenerator/: README.md  daemon.py  settings.cfg.example
backend/: main.py
backend/agents/: browser_agent.py  jira_agent.py  rca_agent.py  remediation_agent.py  reporter_agent.py  self_heal_agent.py  slack_agent.py  triage_agent.py  web_search_agent.py
backend/analytics/: aggregations.py
backend/api/: app.py  auth.py  persistence.py  secrets.py  streaming.py
backend/graph/: incident_graph.py
backend/guardrails/: safety_guardrails.py
backend/memory/: incident_rag.py
backend/models/: incident_state.py
backend/monitors/: base.py  encryption.py  local_monitor.py  manager.py  persistence.py  ssh_monitor.py  syslog_monitor.py  trigger.py
backend/simulators/: payment_outage.py
backend/tools/: jira_tool.py  llm_config.py  (+4 more)
docs/: API.md  CLAUDE_HANDOFF.md  CODE_SUMMARY.md  OPERATIONS.md  QUICKSTART.md  WORKFLOW.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
scripts/: setup.sh  start.txt.ps1
tests/: test_analytics.py  test_api.py  test_cost_tracker.py  test_jira_tool.py  test_llm_config.py  test_monitor_classify.py  test_production.py  test_slack_bot_tool.py
(+41 files in other folders)
