[project]
name = "vendor_outage_investigator"
version = "0.1.0"
description = "Autonomous Third-Party Vendor Outage Investigator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.0.60",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.115.0",
    "python-dotenv>=1.2.1",
    "sse-starlette>=2.2.1",
    "stagehand>=3.5.0",
    "tavily-python>=0.7.17",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.4.0",
]
